--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /.vs
 /Exhibition.Portal.Api/obj
 /Exhibition.Portal.Api/wwwroot/src/assets
+/Exhibition.Portal.Api/bin/Debug/netcoreapp2.1
+/Exhibition.Portal.Api/wwwroot/node_modules/.bin
+/Exhibition.Portal.Api/wwwroot/node_modules
