--- a/Exhibition.Portal.Web/package.json
+++ b/Exhibition.Portal.Web/package.json
@@ -66,6 +66,7 @@
     "@types/jasmine": "2.5.38",
     "@types/jquery": "^1.10.35",
     "@types/node": "6.0.73",
+    "angular-file": "^1.2.2",
     "codelyzer": "4.2.1",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
