--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /.vs
 /Exhibition.Portal.Api/obj
 /Exhibition.Portal.Api/wwwroot/src/assets
+/Exhibition.Core/bin/Debug/netstandard2.0
+/Exhibition.Core/obj
+/Exhibition.Portal.Api/bin/Debug/netcoreapp2.1
+/Exhibition.Portal.Api/data
