--- a/Exhibition.Portal.Web/angular.json
+++ b/Exhibition.Portal.Web/angular.json
@@ -18,14 +18,12 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico",
-              "src/data"
+              "src/favicon.ico"
             ],
             "styles": [
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "src/assets/scss/material-dashboard.scss",
-              "src/assets/css/demo.css",
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
+              "src/assets/css/demo.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
@@ -35,8 +33,7 @@
               "node_modules/moment/moment.js",
               "node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
               "node_modules/bootstrap-notify/bootstrap-notify.js",
-              "node_modules/chartist/dist/chartist.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js"
+              "node_modules/chartist/dist/chartist.js"
             ]
           },
           "configurations": {
