--- a/Exhibition.Portal.Web/package.json
+++ b/Exhibition.Portal.Web/package.json
@@ -33,7 +33,7 @@
     "ajv": "6.4.0",
     "angular-datatables": "^7.0.0",
     "arrive": "2.4.1",
-    "bootstrap": "4.1.0",
+    "bootstrap": "^4.2.1",
     "bootstrap-material-design": "4.1.1",
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.0",
