--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Exhibition.Portal.Api/data
 /Exhibition.Portal.Api/wwwroot/node_modules/.bin
 /Exhibition.Portal.Api/wwwroot/node_modules
+/Exhibition.Portal.Api/assets/userfiles
