--- a/Exhibition.Portal.Web/package.json
+++ b/Exhibition.Portal.Web/package.json
@@ -30,8 +30,10 @@
     "@angular/platform-browser-dynamic": "7.0.2",
     "@angular/platform-server": "7.0.2",
     "@angular/router": "7.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "ajv": "6.4.0",
     "angular-datatables": "^7.0.0",
+    "angular-file-uploader": "^5.0.2",
     "arrive": "2.4.1",
     "bootstrap": "^4.2.1",
     "bootstrap-material-design": "4.1.1",
@@ -47,6 +49,7 @@
     "jquery": "^3.4.1",
     "moment": "2.22.1",
     "ng-contenteditable": "^2.1.1",
+    "ngx-mat-select-search": "^1.7.5",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "6.3.3",
