--- a/Exhibition.Core/Exhibition.Core.csproj
+++ b/Exhibition.Core/Exhibition.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.110" />
+    <PackageReference Include="System.IO.Ports" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
