--- a/Agents/Exhibition.Agent.Show/App.config
+++ b/Agents/Exhibition.Agent.Show/App.config
@@ -4,9 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
   </startup>
   <appSettings>
-    <add key="name" value="大屏"/>
+    <add key="name" value="01"/>
     <add key="api" value="https://localhost:44378/api/mgr/{0}"/>
-    <add key="resource" value="https://localhost:44378/"/>
+    <add key="resource" value="https://localhost:44378/assets/userfiles/"/>
   </appSettings>
   <system.serviceModel>
     <services>
