--- a/Exhibition.Core/Exhibition.Core.csproj
+++ b/Exhibition.Core/Exhibition.Core.csproj
@@ -27,4 +27,13 @@
     <Folder Include="Models\Filters\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="BuildinData\Directives.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="BuildinData\Terminal.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
