--- a/Agents/SerialPortHelper/SerialPortHelper.csproj
+++ b/Agents/SerialPortHelper/SerialPortHelper.csproj
@@ -111,6 +111,7 @@
     <Compile Include="AgentHost.cs" />
     <Compile Include="Common\Extensions\HttpExtension.cs" />
     <Compile Include="Common\Extensions\JsonExtension.cs" />
+    <Compile Include="Common\Extensions\ServicesExtension.cs" />
     <Compile Include="Core\Contract\IAgentHost.cs" />
     <Compile Include="Core\Contract\IOperationService.cs" />
     <Compile Include="Core\Enum\ListenStates.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Core\Models\GeneralResponse.cs" />
     <Compile Include="Core\Models\SerialPortDirective.cs" />
     <Compile Include="Core\Models\SerialPortSettings.cs" />
+    <Compile Include="Core\Models\Workflow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\OperationService.cs" />
