--- a/Agents/SerialPortHelper/SerialPortHelper.csproj
+++ b/Agents/SerialPortHelper/SerialPortHelper.csproj
@@ -73,8 +73,8 @@
     <Reference Include="Microsoft.Extensions.Configuration.Binder, Version=2.2.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Extensions.Configuration.Binder.2.2.0\lib\netstandard2.0\Microsoft.Extensions.Configuration.Binder.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.2.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.Extensions.DependencyInjection.2.2.0\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
+    <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.DependencyInjection.2.1.1\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=2.2.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.2.2.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
@@ -140,12 +140,15 @@
     <Compile Include="Common\Extensions\HttpExtension.cs" />
     <Compile Include="Common\Extensions\JsonExtension.cs" />
     <Compile Include="Common\Extensions\ServicesExtension.cs" />
+    <Compile Include="Common\Extensions\WorkflowExtension.cs" />
     <Compile Include="Core\Contract\IAgentHost.cs" />
     <Compile Include="Core\Contract\IOperationService.cs" />
+    <Compile Include="Core\Enum\DetectionTypes.cs" />
+    <Compile Include="Core\Enum\DirectiveTypes.cs" />
     <Compile Include="Core\Enum\ListenStates.cs" />
+    <Compile Include="Core\Models\SerialPortWorkContext.cs" />
     <Compile Include="Core\Models\OperationContext.cs" />
     <Compile Include="Core\Models\GeneralResponse.cs" />
-    <Compile Include="Core\Models\SerialPortDirective.cs" />
     <Compile Include="Core\Models\SerialPortSettings.cs" />
     <Compile Include="Core\Models\Workflow.cs" />
     <Compile Include="Program.cs" />
