--- a/Agents/Exhibition/Exhibition.csproj
+++ b/Agents/Exhibition/Exhibition.csproj
@@ -83,6 +83,12 @@
     <Compile Include="ForumMain.Designer.cs">
       <DependentUpon>ForumMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FromWapper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FromWapper.Designer.cs">
+      <DependentUpon>FromWapper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\IOperationService.cs" />
@@ -93,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ForumMain.resx">
       <DependentUpon>ForumMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FromWapper.resx">
+      <DependentUpon>FromWapper.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
