[Manny]Impove debug feature

--- a/Agents/Exhibition/App.config
+++ b/Agents/Exhibition/App.config
@@ -5,8 +5,8 @@
   </startup>
   <appSettings>
     <add key="name" value="01"/>
-    <add key="api" value="http://192.168.0.10:8080/api/mgr/{0}"/>
-    <add key="resource" value="http://192.168.0.10:8080/assets/userfiles/"/>
+    <add key="api" value="http://localhost:8080/api/mgr/{0}"/>
+    <add key="resource" value="http://localhost:8080/assets/userfiles/"/>
   </appSettings>
   <system.serviceModel>
     <services>
