--- a/Agents/Exhibition/Exhibition.csproj
+++ b/Agents/Exhibition/Exhibition.csproj
@@ -75,8 +75,15 @@
     <Compile Include="Core\IOperate.cs" />
     <Compile Include="Core\Models\MediaControlDirective.cs" />
     <Compile Include="Core\Models\OperationContext.cs" />
+    <Compile Include="Core\Models\StoredState.cs" />
     <Compile Include="Core\Models\WorkingState.cs" />
     <Compile Include="Core\OperationEventHandler.cs" />
+    <Compile Include="FrmLayoutInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLayoutInfo.Designer.cs">
+      <DependentUpon>FrmLayoutInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="ForumMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,12 +100,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\IOperationService.cs" />
     <Compile Include="Services\OperationService.cs" />
+    <Compile Include="Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\AgentHost.cs" />
     <EmbeddedResource Include="Components\AxWebBrowser.resx">
       <DependentUpon>AxWebBrowser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ForumMain.resx">
       <DependentUpon>ForumMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmLayoutInfo.resx">
+      <DependentUpon>FrmLayoutInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FromWapper.resx">
       <DependentUpon>FromWapper.cs</DependentUpon>
@@ -113,6 +128,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
