--- a/Agents/OfficialHelper/OfficialHelper.csproj
+++ b/Agents/OfficialHelper/OfficialHelper.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.7" />
     <PackageReference Include="log4net" Version="2.0.8" />
   </ItemGroup>
 
