--- a/Agents/SerialPortHelper/SerialPortHelper.csproj
+++ b/Agents/SerialPortHelper/SerialPortHelper.csproj
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -146,6 +146,7 @@
     <Compile Include="Core\Enum\DetectionTypes.cs" />
     <Compile Include="Core\Enum\DirectiveTypes.cs" />
     <Compile Include="Core\Enum\ListenStates.cs" />
+    <Compile Include="Core\Models\DirectiveQueueContext.cs" />
     <Compile Include="Core\Models\SerialPortWorkContext.cs" />
     <Compile Include="Core\Models\OperationContext.cs" />
     <Compile Include="Core\Models\GeneralResponse.cs" />
